# Assignment-3-Group

./: CMakeLists.txt  Makefile  README.md  build.bat  report.txt
include/: LogParser.h  OllamaClient.h  ThreatAnalyzer.h  Utils.h
samples/: firewall.csv
src/: LogParser.cpp  OllamaClient.cpp  ThreatAnalyzer.cpp  Utils.cpp  main.cpp
